tooling/nargo_cli/tests/snapshots/execution_success/regression_8739/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
assertion_line: 512
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : []"
  ],
  "debug_symbols": "pdLRCoMgFAbgd/Hai3RbrV5ljDA7hSAqpsGI3n0WurXBYNTV8Zzf79zohFpofF8L1ekBVbcJNVZIKfpaas6c0CpMpxmj1NbOAoQR2uRBGWZBOVQpLyVGI5N+vTQYptbqmA1phhGoNtSwsBMSltOM3zr7TfNztAV94cvfmhRl5OSa7fHlKfnyfNAXOzwlJHpK8mOekg9/Dx3jwn6/98isYI2E2HZe8U3qHiYl6b8Yqzm03sKyac3C7ic=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
