tooling/nargo_cli/tests/snapshots/execution_success/regression_8739/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : []"
  ],
  "debug_symbols": "ndFRC4MgEAfw7+KzD+lWrb7KGGF2hSAqpsGIvvsstLXBYPR03v393cvNqIPWD41QvR5RfZ9Ra4WUYmik5swJrcJ0XjBKbeMsQBihQx6UYRaUQ7XyUmI0Mem3T6NhaquO2ZBmGIHqQg0LeyFhfS34rbPftLhGW9Id539rUlaRk1t2xld58lVxyl92X57wlJDoKSUf/hE6xoX9vtfErGCthNj2XvFD6p4mJenexmoOnbewbtqysPsF",
  "file_map": {},
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
